style: fix overflow auto

--- a/client/index.scss
+++ b/client/index.scss
@@ -21,10 +21,8 @@ body {
 .gallery {
   position: absolute;
   top: 250px;
-  margin-top: 50px;
   width: 100%;
   height: 100%;
-  overflow: scroll;
 }
 
 .col-space {
